Renamed hidden tools.

--- a/demo/dude/demo-dude.html
+++ b/demo/dude/demo-dude.html
@@ -159,28 +159,28 @@ Copyright (c) 2015 DudeTeam. All rights reserved.
                 this.$.toolbar.addCommand({
                     hidden: true,
                     icon: "fa fa-compress",
-                    description: "Zoom to selection",
+                    description: "Focus",
                     shortcut: ["ctrl+shift+0", "meta+shift+0"],
                     action: this._zoomToSelection.bind(this)
                 });
                 this.$.toolbar.addCommand({
                     hidden: true,
                     icon: "fa fa-circle",
-                    description: "Select blocks",
+                    description: "Blocks",
                     shortcut: ["ctrl+shift+a", "meta+shift+a"],
                     action: this._selectAllBlocks.bind(this)
                 });
                 this.$.toolbar.addCommand({
                     hidden: true,
                     icon: "fa fa-circle",
-                    description: "Select groups",
+                    description: "Groups",
                     shortcut: ["ctrl+alt+a", "meta+alt+a"],
                     action: this._selectAllGroups.bind(this)
                 });
                 this.$.toolbar.addCommand({
                     hidden: true,
                     icon: "fa fa-circle",
-                    description: "Select all",
+                    description: "All",
                     shortcut: ["ctrl+shift+alt+a", "meta+shift+alt+a"],
                     action: this._selectAll.bind(this)
                 });
