renamed zoom to fit.

--- a/demo/dude/demo-dude.html
+++ b/demo/dude/demo-dude.html
@@ -152,7 +152,7 @@ Copyright (c) 2015 DudeTeam. All rights reserved.
                 });
                 this.$.toolbar.addCommand({
                     icon: "fa fa-compress",
-                    description: "Zoom",
+                    description: "Fit",
                     shortcut: ["ctrl+0", "meta+0"],
                     action: this._zoomToFit.bind(this)
                 });
