--- a/demo/dude/demo-dude.html
+++ b/demo/dude/demo-dude.html
@@ -11,7 +11,8 @@ Copyright (c) 2015 DudeTeam. All rights reserved.
 <link rel="import" href="../../panels/dude-graph-edit-block.html">
 <link rel="import" href="../../../dude-toolbar/dude-toolbar.html">
 <link rel="import" href="../../../dude-seed/dude-sidebar.html">
-<script src="demo-dude.js"></script>
+<script src="demo-data.js"></script>
+<script src="demo-models.js"></script>
 <!--
 `demo-dude` is a Polymer element to wrap a dude-graph demo
 -->
