--- a/panels/dude-graph-create.html
+++ b/panels/dude-graph-create.html
@@ -19,6 +19,9 @@ Copyright (c) 2015 DudeTeam. All rights reserved.
             overflow: auto;
             padding: 10px;
         }
+        paper-button {
+            margin-top: 10px;
+        }
     </style>
     <template>
         <dude-hierarchy
@@ -41,6 +44,12 @@ Copyright (c) 2015 DudeTeam. All rights reserved.
 
             ready: function () {
                 this.set("_models", DEMO_DUDE_MODEL_DATA);
+            },
+
+            willOpen: function () {
+                setTimeout(function () {
+                    this.$["autocomplete"].focus(); // Fixes graphically bug with sidebar animation
+                }.bind(this), 100);
             },
 
             _createBlock: function (e) {
