--- a/dude-graph-editor.html
+++ b/dude-graph-editor.html
@@ -284,6 +284,18 @@ Copyright (c) 2015 DudeTeam. All rights reserved.
         },
 
         /**
+         * Creates a new variable or function model.
+         */
+        createVariableOrFunction: function (e) {
+            if (e.detail.item.name === "New function...") {
+                console.warn("Not yet implemented.");
+            }
+            if (e.detail.item.name === "New variable...") {
+                this._openPanel("createVariable");
+            }
+        },
+
+        /**
          *
          * @param {Object} blockData
          * @returns {dudeGraph.RenderBlock}
