--- a/dude-graph-editor.html
+++ b/dude-graph-editor.html
@@ -291,7 +291,7 @@ Copyright (c) 2015 DudeTeam. All rights reserved.
                 console.warn("Not yet implemented.");
             }
             if (e.detail.item.name === "New variable...") {
-                this._openPanel("createVariable");
+                this.openPanel("createVariable");
             }
         },
 
